[package]
name = "bevy_roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" 

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
serde = "1.0.195"
serde_json = "1.0"
bracket-lib = "~0.8"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk" }
rfd = "~0.14"

# Have to manually patch in bevy_ecs_tilemap's repo for version 0.12 of Bevy - repos have updates, but not published on crates-io yet?
# This section is required since ecs_ldtk requires ecs_tilemap 0.12, and both require Bevy 0.12
[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk" }